--- a/resources/config.json
+++ b/resources/config.json
@@ -1,13 +1,17 @@
 {
-  "cities": ["Moscow", "Kaliningrad", "Saint Petersburg"],
+  "cities": ["Moscow", "vfrvvrwvuiuohew","Kaliningrad", "Saint Petersburg"],
 
   "day_parts": ["Утро", "День", "Вечер", "Ночь"],
-  "weekday_names": ["Вс", "Пн", "Вт", "Ср", "Чт", "Пт", "Сб"],
-  "month_names": ["Янв", "Фев", "Мар", "Апр", "Май", "Июнь", "Июль", "Авг", "Сен", "Окт", "Ноя", "Дек"],
+  "weekday_names": ["Воскресенье", "Понедельник", "Вторник", "Среда", "Четверг", "Пятница", "Суббота"],
+  "month_names": ["Января", "Февраля", "Марта", "Апреля", "Мая", "Июня", "Июля", "Августа", "Сентября", "Октября", "Ноября", "Декабря"],
 
   "weather_names": ["Солнечно", "Довольно ясно", "Облачно", "Пасмурно", "Туман", "Туман",
     "Легкая морось", "Морось", "Сильная морось",  "Моросящий дождь", "Моросящий дождь",
     "Слабый дождь", "Дождь", "Сильный дождь",  "Ледяной дождь", "Ледяной дождь",  "Легкий снег",
     "Снег", "Сильный снегопад", "Крупный снег",  "Небольшой ливень", "Ливень", "Ливень",
-    "Небольшой снегопад", "Снегопад",  "Гроза", "Гроза с градом", "Гроза с градом"]
+    "Небольшой снегопад", "Снегопад",  "Гроза", "Гроза с градом", "Гроза с градом"],
+
+  "error_weather": "Произошла <span style=\"color: red\">ошибка</span> при получения прогноза погоды для города",
+  "error_city": "Город <span style=\"color: red\">не найден</span> :(",
+  "error_network": "<span style=\"color: red\">Отсутвует</span подключение к интернету :("
 }
